--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scrollbar-color: #7F7F7F7F #00000000;
+  scrollbar-width: thin;
+}
+
 .borderBlack {
   @apply border border-black border-opacity-15;
 }
